# DnDTool3.0

./: .gitignore  CMakeLists.txt  ChangeLog.txt  OutputLog.txt  README.txt  main.cpp  path.txt
include/DnDTool3.0/: Item.h  Player.h  PlayerHandler.h  Simulator.h  Spell.h
include/DnDTool3.0/Menus/: HitpointManaModificationMenu.h  LoadPlayerMenu.h  MainSimMenu.h  SettingsMenu.h  SimulationInitMenu.h  SkillModificationMenu.h  SkillsOverlayMenu.h  StatModificationMenu.h  StatsOverlayMenu.h  ViewInventoryMenu.h
src/: PlayerHandler.cpp  Simulator.cpp
src/Menus/: HitpointManaModificationMenu.cpp  LoadPlayerMenu.cpp  MainSimMenu.cpp  SettingsMenu.cpp  SimulationInitMenu.cpp  SkillModificationMenu.cpp  SkillsOverlayMenu.cpp  StatModificationMenu.cpp  StatsOverlayMenu.cpp  ViewInventoryMenu.cpp
